TS-056 Fixed issue with sidescrolling on mobile.

--- a/src/scss/components/_portfolioitems.scss
+++ b/src/scss/components/_portfolioitems.scss
@@ -1,4 +1,7 @@
 .portfolio-items {
+  max-width: 100%;
+  margin-left: 0;
+  margin-right: 0;
   .portfolio-item {
     position: relative;
     max-width: 100%;
